==> ArduPilot/ardupilot/modules/ChibiOS/os/hal/ports/SPC5/LLD/ESCI_v1/hal_serial_lld.c <==
#include "hal.h"

static void notify1(io_queue_t *qp) {

  (void)qp;
  if (ESCI_A.SR.B.TDRE) {
    msg_t b = sdRequestDataI(&SD1);
    if (b != Q_EMPTY) {
      ESCI_A.SR.B.TDRE = 1;
      ESCI_A.CR1.B.TIE = 1;
      ESCI_A.DR.R = (uint16_t)b;
    }
  }
}

static void notify2(io_queue_t *qp) {

  (void)qp;
  if (ESCI_B.SR.B.TDRE) {
    msg_t b = sdRequestDataI(&SD2);
    if (b != Q_EMPTY) {
      ESCI_B.SR.B.TDRE = 1;
      ESCI_B.CR1.B.TIE = 1;
      ESCI_B.DR.R = (uint16_t)b;
    }
  }
}

static void notify3(io_queue_t *qp) {

  (void)qp;
  if (ESCI_C.SR.B.TDRE) {
    msg_t b = sdRequestDataI(&SD3);
    if (b != Q_EMPTY) {
      ESCI_C.SR.B.TDRE = 1;
      ESCI_C.CR1.B.TIE = 1;
      ESCI_C.DR.R = (uint16_t)b;
    }
  }
}

void sd_lld_init(void) {

#if SPC5_USE_ESCIA
  sdObjectInit(&SD1, NULL, notify1);
  SD1.escip       = &ESCI_A;
  ESCI_A.CR2.R    = 0x8000;                 /* MDIS ON.                     */
  INTC.PSR[SPC5_ESCIA_NUMBER].R = SPC5_ESCIA_PRIORITY;
#endif

#if SPC5_USE_ESCIB
  sdObjectInit(&SD2, NULL, notify2);
  SD2.escip       = &ESCI_B;
  ESCI_B.CR2.R    = 0x8000;                 /* MDIS ON.                     */
  INTC.PSR[SPC5_ESCIB_NUMBER].R = SPC5_ESCIB_PRIORITY;
#endif

#if SPC5_USE_ESCIC
  sdObjectInit(&SD3, NULL, notify3);
  SD3.escip       = &ESCI_C;
  ESCI_C.CR2.R    = 0x8000;                 /* MDIS ON.                     */
  INTC.PSR[SPC5_ESCIC_NUMBER].R = SPC5_ESCIC_PRIORITY;
#endif
}
